<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="#ffb300">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:weightSum="6"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bookphoto"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/bookname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:textSize="18sp"
                        android:padding="8dp"
                        android:textColor="#000000"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/authorname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bookname"
                        android:text="@string/author_of_the_book"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/bookprice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/authorname"
                        android:text="@string/rs_299"
                        android:textSize="13sp"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textColor="#357a38"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textColor="#ffc828"
                    android:textStyle="bold"
                    android:text="@string/_4_5"
                    android:drawablePadding="4dp"
                    app:drawableLeftCompat="@drawable/baseline_star_24" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/l1">

                <TextView
                    android:id="@+id/aboutbook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_the_book"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="4dp"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aboutbook"
                    android:layout_margin="10dp"
                    android:padding="6dp"
                    android:text="@string/description_of_the_book"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/favourites"
        android:text="@string/add_to_favourites"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:padding="4dp"/>

    <RelativeLayout
        android:id="@+id/progresss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ProgressBar
            android:id="@+id/progressbarr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>